add java bind