@@ -2,7 +2,7 @@
 
 `qe6502` is a small, embeddable 6502/65C02 CPU emulator core built around an explicit external bus interface. The host owns memory and devices, services one bus request at a time, and feeds read data back on the following tick.
 
-The core focuses on deterministic bus-level behavior, low integration overhead, and stable integration surfaces for C, C++, C#, Python, JavaScript/WebAssembly, and other FFI users. `qe6502` is a CPU core, not a complete machine emulator.
+The core focuses on deterministic bus-level behavior, low integration overhead, and stable integration surfaces for C, C++, C#, Java, Python, JavaScript/WebAssembly, and other FFI users. `qe6502` is a CPU core, not a complete machine emulator.
 
 The fast native C API keeps the complete CPU state in a 16-byte `qe6502_t`. The stable ABI API uses a fixed 64-byte opaque context, and save/load snapshots are also fixed at 64 bytes.
 
@@ -112,6 +112,17 @@ using Qe6502;
 var cpu = new Cpu(Model.Nmos);
 ```
 
+Use the **Java binding** when integrating the ABI-backed CPU core from Java 25+ via the Foreign Function & Memory API.
+
+```java
+import com.egt.qe6502.Cpu;
+import com.egt.qe6502.Model;
+
+try (Cpu cpu = new Cpu(Model.NMOS)) {
+    cpu.jumpTo(0x8000);
+}
+```
+
 Use the **Python binding** when scripting against the ABI-backed CPU core from CPython. `tick()` returns the packed bus state for low-overhead Python loops.
 
 ```python
@@ -193,6 +204,8 @@ Available installed targets depend on the build options:
 | `QE6502_BUILD_SHARED` | `ON` | Build the stable shared ABI library. |
 | `QE6502_BUILD_CPP` | `ON` | Build and install the C++ wrapper. Requires `QE6502_BUILD_STATIC=ON`. |
 | `QE6502_BUILD_CSHARP` | `ON` | Build the C# binding when the .NET SDK is available. |
+| `QE6502_BUILD_JAVA` | `ON` | Build the Java binding when JDK 25+ development tools are available. |
+| `QE6502_REQUIRE_JAVA` | `OFF` | Fail configure if `QE6502_BUILD_JAVA=ON` but JDK 25+ is unavailable. Intended for CI. |
 | `QE6502_BUILD_PYTHON` | `ON` | Build the CPython binding when Python development headers are available. |
 | `QE6502_BUILD_TESTS` | `${BUILD_TESTING}` top-level, `OFF` as subproject | Build tests and harnesses. Turn this off for dependency/package builds. |
 | `QE6502_BUILD_WASM` | `OFF` | Enable the WebAssembly build mode. |
@@ -352,6 +365,31 @@ for (;;)
 
 The C# binding uses the stable shared ABI and exposes the same cycle-by-cycle external bus model as the native APIs.
 
+## Minimal Java example
+
+```java
+import com.egt.qe6502.Cpu;
+import com.egt.qe6502.Model;
+
+byte[] memory = new byte[65536];
+memory[0x8000] = (byte)0xEA; // NOP
+
+try (Cpu cpu = new Cpu(Model.NMOS)) {
+    cpu.jumpTo(0x8000);
+
+    for (int i = 0; i < 1000; ++i) {
+        if (cpu.isWrite()) {
+            memory[cpu.address()] = (byte)cpu.data();
+            cpu.tick();
+        } else {
+            cpu.tick(memory[cpu.address()] & 0xff);
+        }
+    }
+}
+```
+
+The Java binding uses Java 25+ FFM over the stable shared ABI. Development-tree runs use `--enable-native-access=ALL-UNNAMED` and pass the native library through `-Dqe6502.native.path=...`; CMake run targets and CTest entries do this automatically.
+
 ## Minimal Python example
 
 ```python
@@ -378,7 +416,7 @@ The Python binding uses the stable ABI. The hot path is `tick(data) -> int`; dec
 
 `qe6502` supports a stable fixed-size 64-byte save/load snapshot format. A snapshot captures the complete CPU state, including the current internal bus-cycle phase, so restored execution resumes deterministically rather than only restoring the visible registers.
 
-The same snapshot format is exposed through the native C API, the stable ABI API, the C++ wrapper, the C# binding, the Python binding, and the JavaScript/WASM binding, so snapshots can be shared between bindings that use the same snapshot format.
+The same snapshot format is exposed through the native C API, the stable ABI API, the C++ wrapper, the C# binding, the Java binding, the Python binding, and the JavaScript/WASM binding, so snapshots can be shared between bindings that use the same snapshot format.
 
 A small C++ wrapper example:
 
@@ -463,7 +501,7 @@ The exact performance numbers in that repository should be read as measurements 
 
 The first official public release is currently targeted for October 2026, subject to API/ABI stabilization and completion of the current correctness baseline.
 
-The core project currently includes C, C++, stable ABI, C#, Python, and JavaScript/WebAssembly integration surfaces. A Rust binding is planned/in progress.
+The core project currently includes C, C++, stable ABI, C#, Java, Python, and JavaScript/WebAssembly integration surfaces. A Rust binding is planned/in progress.
 
 ## License
 
